Add tema crads to landing page

--- a/src/teams/teams.html
+++ b/src/teams/teams.html
@@ -1,8 +1,18 @@
 <template>
-  <div class="container">
-    <h3 class="center-align">Travel Simulator</h3>
-    <div class="flex-center">
-      <button class="btn waves-effect waves-light center" type="submit">Generate Travel</button>
+    <div class="actions margin-bottom-40">
+      <button class="btn waves-effect waves-light center" type="submit">
+        <i class="fa fa-plus"></i>
+        New Team
+      </button>
     </div>
-  </div>
+
+    <div class="container">
+      <div class="team_card margin-bottom-40">
+        <img class="team_card-image" src="../../images/space_wolves_logo.png" alt="space_wolves_logo">
+        <span>Fangs of Jerry</span>
+      </div>
+      <div class="team_card margin-bottom-40">1</div>
+      <div class="team_card margin-bottom-40">1</div>
+      <div class="team_card margin-bottom-40">1</div>
+    </div>
 </template>
