Add early team card design

--- a/src/teams/teams.html
+++ b/src/teams/teams.html
@@ -8,11 +8,36 @@
 
     <div class="container">
       <div class="team_card margin-bottom-40">
-        <img class="team_card-image" src="../../images/space_wolves_logo.png" alt="space_wolves_logo">
-        <span>Fangs of Jerry</span>
+        <div class="team_card-actions">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          <i class="fa fa-clone" aria-hidden="true"></i>
+          <i class="fa fa-trash" aria-hidden="true"></i>
+        </div>
+        <div class="team_card-container flex-center">
+          <img class="team_card-image" src="../../images/space_wolves_logo.png" alt="space_wolves_logo">
+          <div class="team_card-data flex-grow-2">
+            <h3 class="team_card-name">Fangs of Jerry</h3>
+            <div class="team_card-faction">Adeptus Astartes</div>
+            <div class="team_card-subfaction">Space Wolves</div>
+            <div class="team_card-pts">125 pts</div>
+          </div>
+        </div>
       </div>
-      <div class="team_card margin-bottom-40">1</div>
-      <div class="team_card margin-bottom-40">1</div>
-      <div class="team_card margin-bottom-40">1</div>
+      <div class="team_card margin-bottom-40">
+        <div class="team_card-actions">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          <i class="fa fa-clone" aria-hidden="true"></i>
+          <i class="fa fa-trash" aria-hidden="true"></i>
+        </div>
+        <div class="team_card-container flex-center">
+          <img class="team_card-image" src="../../images/tyranids_logo.png" alt="space_wolves_logo">
+          <div class="team_card-data flex-grow-2">
+            <h3 class="team_card-name">Hunter Killers</h3>
+            <div class="team_card-faction">Tyranids</div>
+            <div class="team_card-subfaction">Kraken Fleet</div>
+            <div class="team_card-pts">125 pts</div>
+          </div>
+        </div>
+      </div>
     </div>
 </template>
