Remove # from route config

--- a/src/teams/teams.html
+++ b/src/teams/teams.html
@@ -1,9 +1,9 @@
 <template>
     <div class="actions margin-bottom-40">
-      <button class="btn waves-effect waves-light center" type="submit">
+      <a href="teams/new" class='btn waves-effect waves-light center'>
         <i class="fa fa-plus"></i>
         New Team
-      </button>
+      </a>
     </div>
 
     <div class="container">
@@ -35,7 +35,7 @@
             <h3 class="team_card-name">Hunter Killers</h3>
             <div class="team_card-faction">Tyranids</div>
             <div class="team_card-subfaction">Kraken Fleet</div>
-            <div class="team_card-pts">125 pts</div>
+            <div class="team_card-pts">122 pts</div>
           </div>
         </div>
       </div>
