Setup custom select element

--- a/src/teams/new-team.html
+++ b/src/teams/new-team.html
@@ -1,3 +1,8 @@
 <template>
-  <h1>hey fool this is the new team page</h1>
+  <form>
+    <div>
+      <input class="new_team-name text-input margin-right-30px" type="text" placeholder="New team name">
+      <kt-select></kt-select>
+    </div>
+  </form>
 </template>
