--- a/src/teams/teams.html
+++ b/src/teams/teams.html
@@ -1,13 +1,13 @@
 <template>
-    <div class="actions margin-bottom-40">
-      <a href="teams/new" class='btn waves-effect waves-light center'>
+    <div class="actions margin-bottom-40px">
+      <a id="new_team-button" href="teams/new" class='btn waves-effect waves-light center'>
         <i class="fa fa-plus"></i>
         New Team
       </a>
     </div>
 
     <div class="container">
-      <div class="team_card margin-bottom-40">
+      <div class="team_card margin-bottom-40px">
         <div class="team_card-actions">
           <i class="fa fa-pencil" aria-hidden="true"></i>
           <i class="fa fa-clone" aria-hidden="true"></i>
@@ -23,7 +23,7 @@
           </div>
         </div>
       </div>
-      <div class="team_card margin-bottom-40">
+      <div class="team_card margin-bottom-40px">
         <div class="team_card-actions">
           <i class="fa fa-pencil" aria-hidden="true"></i>
           <i class="fa fa-clone" aria-hidden="true"></i>
