Update components to use roster model

--- a/src/teams/roster/unit-card.html
+++ b/src/teams/roster/unit-card.html
@@ -33,7 +33,7 @@
   <div repeat.for="wargear of unit.wargear.weaponSlots">
     <kt-select id="kt-wargear-select-${$index}" class="margin-right-30px"
       selected-value.bind="wargear.selected"
-      collection.bind="wargear.options">
+      collection.bind="getWargearOptions()">
     </kt-select>
   </div>
 </template>
